test/tests/errors/error-record-non-unique-ids3.sm
// true
// false
// false
/**/
/**/

program {
    proc x(x: record(x: int, x: int)) {}
}